# glance-ai-briefing

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml  test.yml
docs/superpowers/plans/: 2026-07-19-google-ai-provider.md
docs/superpowers/specs/: 2026-07-19-google-ai-provider-design.md
src/briefing/: __init__.py  cli.py  config.py  curator.py  feeds.py  render.py  server.py
src/briefing/providers/: __init__.py  base.py  deepseek.py  google.py
tests/: conftest.py  test_config.py  test_curator.py  test_feeds.py  test_providers.py  test_render.py  test_server.py
