[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "briefing"
version = "1.0.0"
description = "AI-curated news briefing extension for Glance"
requires-python = ">=3.10"
dependencies = [
    "feedparser>=6.0",
    "requests>=2.31",
    "pyyaml>=6.0",
]

[project.scripts]
briefing = "briefing.cli:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
